# dota-draft-bench

./: .gitignore  README.md  case-study-ally-item-effects.md  pyproject.toml
benchmark/: data.py  evaluate.py  metrics.py
benchmark/models/: base.py  gbm.py  logistic.py  neural.py  pairwise_additive.py  popularity.py
benchmark/tests/: conftest.py  test_baselines.py  test_data_integrity.py  test_metrics.py
data/: aggregate.py  convert.py
web/: package-lock.json
web/app/: layout.tsx  page.tsx
web/app/components/: DraftApp.tsx  HeroPicker.tsx
web/lib/: compute.ts
