[project]
name = "dota-draft-bench"
version = "0.1.0"
description = "Dota 2 draft-context item recommendation benchmark"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=14.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "pytest>=7.0",
]

[project.optional-dependencies]
neural = ["torch>=2.0"]

[tool.pytest.ini_options]
testpaths = ["benchmark/tests"]
